2002-03-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: add EXTRA_SOURCES, WIN_SOURCES, UNIX_SOURCES
	example lines, remove $(sample_LIB_FILE)_OBJECTS problematic
	macro, move lib_BINARIES and BINARIES as they don't need editing.
	Replace $(mkinstalldirs) with "mkdir -p", added $(srcdir)/unix to
	VPATH, removed inclusion of tclconfig/installFile.tcl and
	tclconfig/mkinstalldirs in dist: target.

	* aclocal.m4: added comments

2002-03-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in: removed unused @vars@.  Cleaned up targets.  Added
	dist and dist-clean generic targets.  Improved use of OBJEXT.

	* configure.in: bumped package to 0.3, cleaned up macro usage.

	* README: 
	* README.cygwin: 
	* aclocal.m4:
	* configure (new):
	* install-sh, mkinstalldirs, tcl.m4 (removed): complete revamp to
	use the tclconfig updated TEA module

	* exampleA.c, sample.c:
	* exampleA.h, sample.h:
	* tclexampleA.c, tclsample.c: s/exampleA/sample/g

2001-05-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* tcl.m4: 419812

2000-06-26  Mike Thomas  <wart@scriptics.com>

	* Makefile.in:  Changed TCLTESTARGS to TESTFLAGS in test: target.

2000-02-03  Mike Thomas  <wart@scriptics.com>

	* tests/:  Added tests subdirectory with sample test files
	* Makefile.in:  Added test target to Makefile.
	* configure.in: Added hooks for when we later move some of the config
	files to a subdirectory.

2000-02-02  Mike Thomas  <wart@scriptics.com>

	* configure.in:
	* Makefile.in: Applied patch from Andreas Kupries to fix install
	problems when building static libraries.

2000-01-24  Mike Thomas  <wart@scriptics.com>

	* tcl.m4: Look for CYGWIN_98 and CYGWIN_95 environments, not just
	CYGWIN_NT.  Also search for executables with the $EXEEXT extension
	in SC_PROG_TCLSH and SC_PROG_WISH so that we don't pick up MS VS
	junk files.
	* configure.in:  Changes to support building on Win 95/98 using
	the cygwin environment.